--- a/Models/Cockpit/Models/autopilot.ac
+++ b/Models/Cockpit/Models/autopilot.ac
@@ -1,6 +1,5 @@
 AC3Db
 MATERIAL "Black" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Lit" rgb 0.200 0.000 0.000  amb 1.000 1.000 1.000  emis 0.500 0.500 0.500  spec 0.500 0.500 0.500  shi 12 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__autopilot.ac"
 kids 6
@@ -46,7 +45,7 @@ numvert 36
 0.019 -0.04536 -0.17286
 0.019 -0.02574 -0.17286
 0.019 -0.02574 -0.17677
-numsurf 49
+numsurf 48
 SURF 0X30
 mat 0
 refs 4
@@ -321,13 +320,6 @@ refs 3
 6 0 0
 8 0 0
 SURF 0X20
-mat 1
-refs 4
-34 0 0
-33 0 0
-32 0 0
-35 0 0
-SURF 0X20
 mat 0
 refs 4
 23 0 0
@@ -362,6 +354,25 @@ refs 4
 25 0 0
 24 0 0
 22 0 0
+kids 1
+OBJECT poly
+name "AltSelectBulb"
+data 18
+AltSelect.mesh.001
+crease 40.0
+numvert 4
+0.019 -0.04536 -0.17677
+0.019 -0.04536 -0.17286
+0.019 -0.02574 -0.17286
+0.019 -0.02574 -0.17677
+numsurf 1
+SURF 0X20
+mat 0
+refs 4
+2 0 0
+1 0 0
+0 0 0
+3 0 0
 kids 0
 OBJECT poly
 name "HDG1Select"
@@ -433,7 +444,7 @@ numvert 64
 0.00021 -0.04256 0.07486
 0.00021 -0.04325 0.07417
 0.00021 -0.04415 0.07379
-numsurf 76
+numsurf 74
 SURF 0X30
 mat 0
 refs 4
@@ -575,18 +586,6 @@ refs 3
 31 0 0
 29 0 0
 17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-31 0 0
-15 0 0
 SURF 0X20
 mat 0
 refs 3
@@ -938,6 +937,30 @@ refs 4
 38 0 0
 54 0 0
 53 0 0
+kids 1
+OBJECT poly
+name "HDG1SelectBulb"
+data 19
+HDG1Select.mesh.000
+crease 40.0
+numvert 4
+0.019 -0.0459 0.06987
+0.019 -0.0459 0.08262
+0.019 -0.04337 0.08262
+0.019 -0.04337 0.06987
+numsurf 2
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+2 0 0
+1 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+3 0 0
+1 0 0
 kids 0
 OBJECT poly
 name "HDG2Select"
@@ -1009,7 +1032,7 @@ numvert 64
 0.00022 -0.04256 -0.06589
 0.00022 -0.04325 -0.06658
 0.00022 -0.04415 -0.06696
-numsurf 76
+numsurf 74
 SURF 0X30
 mat 0
 refs 4
@@ -1151,18 +1174,6 @@ refs 3
 31 0 0
 29 0 0
 17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-31 0 0
-15 0 0
 SURF 0X20
 mat 0
 refs 3
@@ -1514,6 +1525,30 @@ refs 4
 38 0 0
 54 0 0
 53 0 0
+kids 1
+OBJECT poly
+name "HDG2SelectBulb"
+data 19
+HDG1Select.mesh.004
+crease 40.0
+numvert 4
+0.01901 -0.0459 -0.07088
+0.01901 -0.0459 -0.05813
+0.01901 -0.04337 -0.05813
+0.01901 -0.04337 -0.07088
+numsurf 2
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+2 0 0
+1 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+3 0 0
+1 0 0
 kids 0
 OBJECT poly
 name "SpeedSelect"
@@ -1557,7 +1592,7 @@ numvert 36
 0.019 -0.04536 0.14147
 0.019 -0.02574 0.14147
 0.019 -0.02574 0.13757
-numsurf 49
+numsurf 48
 SURF 0X30
 mat 0
 refs 4
@@ -1832,13 +1867,6 @@ refs 3
 6 0 0
 8 0 0
 SURF 0X20
-mat 1
-refs 4
-34 0 0
-33 0 0
-32 0 0
-35 0 0
-SURF 0X20
 mat 0
 refs 4
 23 0 0
@@ -1873,6 +1901,25 @@ refs 4
 25 0 0
 24 0 0
 22 0 0
+kids 1
+OBJECT poly
+name "SpeedSelectBulb"
+data 20
+SpeedSelect.mesh.001
+crease 40.0
+numvert 4
+0.019 -0.04536 0.13757
+0.019 -0.04536 0.14147
+0.019 -0.02574 0.14147
+0.019 -0.02574 0.13757
+numsurf 1
+SURF 0X20
+mat 0
+refs 4
+2 0 0
+1 0 0
+0 0 0
+3 0 0
 kids 0
 OBJECT poly
 name "VOR1Select"
@@ -1944,7 +1991,7 @@ numvert 64
 0.00058 -0.04256 0.0316
 0.00058 -0.04325 0.03091
 0.00058 -0.04415 0.03053
-numsurf 76
+numsurf 72
 SURF 0X30
 mat 0
 refs 4
@@ -2080,30 +2127,6 @@ refs 3
 29 0 0
 19 0 0
 17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-29 0 0
-17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-31 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-15 0 0
-13 0 0
 SURF 0X20
 mat 0
 refs 3
@@ -2449,6 +2472,44 @@ refs 4
 38 0 0
 54 0 0
 53 0 0
+kids 1
+OBJECT poly
+name "VOR1SelectBulb"
+data 19
+HDG1Select.mesh.002
+crease 40.0
+numvert 6
+0.01937 -0.04561 0.02808
+0.01937 -0.04742 0.03714
+0.01937 -0.04591 0.03937
+0.01937 -0.04366 0.03789
+0.01937 -0.04186 0.02883
+0.01937 -0.04337 0.02661
+numsurf 4
+SURF 0X20
+mat 0
+refs 3
+5 0 0
+4 0 0
+3 0 0
+SURF 0X20
+mat 0
+refs 3
+5 0 0
+3 0 0
+2 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+5 0 0
+2 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+2 0 0
+1 0 0
 kids 0
 OBJECT poly
 name "VOR2Select"
@@ -2520,7 +2581,7 @@ numvert 64
 0.00047 -0.04257 -0.10609
 0.00047 -0.04326 -0.10678
 0.00047 -0.04416 -0.10716
-numsurf 76
+numsurf 72
 SURF 0X30
 mat 0
 refs 4
@@ -2656,30 +2717,6 @@ refs 3
 29 0 0
 19 0 0
 17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-29 0 0
-17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-31 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-15 0 0
-13 0 0
 SURF 0X20
 mat 0
 refs 3
@@ -3025,4 +3062,42 @@ refs 4
 38 0 0
 54 0 0
 53 0 0
+kids 1
+OBJECT poly
+name "VOR2SelectBulb"
+data 19
+HDG1Select.mesh.005
+crease 40.0
+numvert 6
+0.01926 -0.04562 -0.10961
+0.01926 -0.04743 -0.10055
+0.01926 -0.04591 -0.09833
+0.01926 -0.04367 -0.0998
+0.01926 -0.04187 -0.10886
+0.01926 -0.04337 -0.11109
+numsurf 4
+SURF 0X20
+mat 0
+refs 3
+5 0 0
+4 0 0
+3 0 0
+SURF 0X20
+mat 0
+refs 3
+5 0 0
+3 0 0
+2 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+5 0 0
+2 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+2 0 0
+1 0 0
 kids 0
