--- a/Models/Cockpit/Models/radioselector.ac
+++ b/Models/Cockpit/Models/radioselector.ac
@@ -1,8 +1,5 @@
 AC3Db
-MATERIAL "Black.002" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Material.001" rgb 0.200 0.000 0.000  amb 1.000 1.000 1.000  emis 0.500 0.500 0.500  spec 0.500 0.500 0.500  shi 12 trans 0.000
 MATERIAL "Black" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Lit" rgb 0.200 0.000 0.000  amb 1.000 1.000 1.000  emis 0.500 0.500 0.500  spec 0.500 0.500 0.500  shi 12 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__radioselector.ac"
 kids 3
@@ -419,7 +416,7 @@ numvert 48
 0.0095 -0.01184 -0.00138
 0.0075 -0.01662 -0.00616
 0.0095 -0.01662 -0.00616
-numsurf 68
+numsurf 66
 SURF 0X30
 mat 0
 refs 4
@@ -620,18 +617,6 @@ refs 3
 31 0 0
 47 0 0
 17 0 0
-SURF 0X20
-mat 1
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 1
-refs 3
-1 0 0
-31 0 0
-15 0 0
 SURF 0X20
 mat 0
 refs 3
@@ -852,6 +837,30 @@ refs 3
 34 0 0
 6 0 0
 8 0 0
+kids 1
+OBJECT poly
+name "FreqSelectBig.001"
+data 22
+FreqSelectBig.mesh.001
+crease 40.0
+numvert 4
+0.0095 -0.02195 -0.00781
+0.0095 -0.02195 0.01181
+0.0095 -0.01805 0.01181
+0.0095 -0.01805 -0.00781
+numsurf 2
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+2 0 0
+1 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+3 0 0
+1 0 0
 kids 0
 OBJECT poly
 name "FreqSelectSmall"
@@ -907,437 +916,449 @@ numvert 48
 0.0135 -0.01592 0.00031
 0.0095 -0.01831 -0.00208
 0.0135 -0.01831 -0.00208
-numsurf 68
+numsurf 66
 SURF 0X30
-mat 2
+mat 0
 refs 4
 32 0 0
 3 0 0
 2 0 0
 33 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 35 0 0
 7 0 0
 6 0 0
 34 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 37 0 0
 11 0 0
 10 0 0
 36 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 39 0 0
 15 0 0
 14 0 0
 38 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 47 0 0
 31 0 0
 30 0 0
 46 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 41 0 0
 19 0 0
 18 0 0
 40 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 43 0 0
 23 0 0
 22 0 0
 42 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 45 0 0
 27 0 0
 26 0 0
 44 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 19 0 0
 21 0 0
 20 0 0
 18 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 9 0 0
 37 0 0
 36 0 0
 8 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 5 0 0
 35 0 0
 34 0 0
 4 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 33 0 0
 0 0 0
 1 0 0
 32 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 15 0 0
 17 0 0
 16 0 0
 14 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 13 0 0
 39 0 0
 38 0 0
 12 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 29 0 0
 47 0 0
 46 0 0
 28 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 17 0 0
 41 0 0
 40 0 0
 16 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 21 0 0
 43 0 0
 42 0 0
 20 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 25 0 0
 45 0 0
 44 0 0
 24 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 23 0 0
 25 0 0
 24 0 0
 22 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 11 0 0
 13 0 0
 12 0 0
 10 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 25 0 0
 23 0 0
 43 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 45 0 0
 25 0 0
 43 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 43 0 0
 21 0 0
 19 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 29 0 0
 27 0 0
 45 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 45 0 0
 43 0 0
 19 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 29 0 0
 45 0 0
 19 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 29 0 0
 19 0 0
 41 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 47 0 0
 29 0 0
 41 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 47 0 0
 41 0 0
 17 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 31 0 0
 47 0 0
 17 0 0
 SURF 0X20
-mat 3
-refs 3
-31 0 0
-17 0 0
-15 0 0
-SURF 0X20
-mat 3
-refs 3
-1 0 0
-31 0 0
-15 0 0
-SURF 0X20
-mat 2
+mat 0
 refs 3
 1 0 0
 15 0 0
 39 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 1 0 0
 39 0 0
 32 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 39 0 0
 13 0 0
 32 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 13 0 0
 3 0 0
 32 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 13 0 0
 11 0 0
 3 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 11 0 0
 37 0 0
 3 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 37 0 0
 35 0 0
 3 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 35 0 0
 5 0 0
 3 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 37 0 0
 9 0 0
 35 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 9 0 0
 7 0 0
 35 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 1 0 0
 0 0 0
 30 0 0
 31 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 27 0 0
 29 0 0
 28 0 0
 26 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 7 0 0
 9 0 0
 8 0 0
 6 0 0
 SURF 0X30
-mat 2
+mat 0
 refs 4
 3 0 0
 5 0 0
 4 0 0
 2 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 42 0 0
 22 0 0
 24 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 42 0 0
 24 0 0
 44 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 18 0 0
 20 0 0
 42 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 44 0 0
 26 0 0
 28 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 18 0 0
 42 0 0
 44 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 18 0 0
 44 0 0
 28 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 40 0 0
 18 0 0
 28 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 40 0 0
 28 0 0
 46 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 16 0 0
 40 0 0
 46 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 16 0 0
 46 0 0
 30 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 14 0 0
 16 0 0
 30 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 0 0 0
 14 0 0
 30 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 0 0 0
 38 0 0
 14 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 0 0 0
 33 0 0
 38 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 33 0 0
 12 0 0
 38 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 33 0 0
 2 0 0
 12 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 2 0 0
 10 0 0
 12 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 2 0 0
 36 0 0
 10 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 2 0 0
 34 0 0
 36 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 2 0 0
 4 0 0
 34 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 34 0 0
 8 0 0
 36 0 0
 SURF 0X20
-mat 2
+mat 0
 refs 3
 34 0 0
 6 0 0
 8 0 0
+kids 1
+OBJECT poly
+name "FreqSelectSmall.001"
+data 24
+FreqSelectSmall.mesh.001
+crease 40.0
+numvert 4
+0.0135 -0.02098 -0.0029
+0.0135 -0.02098 0.0069
+0.0135 -0.01902 0.0069
+0.0135 -0.01902 -0.0029
+numsurf 2
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+2 0 0
+1 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+3 0 0
+1 0 0
 kids 0
