--- a/Models/Cockpit/Models/radioselector.ac
+++ b/Models/Cockpit/Models/radioselector.ac
@@ -1,5 +1,7 @@
 AC3Db
+MATERIAL "Black.001" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
 MATERIAL "Black" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "Lit" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.1 0.1 0.1  spec 0.500 0.500 0.500  shi 32 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__radioselector.ac"
 kids 3
@@ -418,421 +420,421 @@ numvert 48
 0.0095 -0.01662 -0.00616
 numsurf 66
 SURF 0X30
-mat 0
+mat 1
 refs 4
 32 0 0
 3 0 0
 2 0 0
 33 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 35 0 0
 7 0 0
 6 0 0
 34 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 37 0 0
 11 0 0
 10 0 0
 36 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 39 0 0
 15 0 0
 14 0 0
 38 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 47 0 0
 31 0 0
 30 0 0
 46 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 41 0 0
 19 0 0
 18 0 0
 40 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 43 0 0
 23 0 0
 22 0 0
 42 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 45 0 0
 27 0 0
 26 0 0
 44 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 19 0 0
 21 0 0
 20 0 0
 18 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 9 0 0
 37 0 0
 36 0 0
 8 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 5 0 0
 35 0 0
 34 0 0
 4 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 33 0 0
 0 0 0
 1 0 0
 32 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 15 0 0
 17 0 0
 16 0 0
 14 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 13 0 0
 39 0 0
 38 0 0
 12 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 29 0 0
 47 0 0
 46 0 0
 28 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 17 0 0
 41 0 0
 40 0 0
 16 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 21 0 0
 43 0 0
 42 0 0
 20 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 25 0 0
 45 0 0
 44 0 0
 24 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 23 0 0
 25 0 0
 24 0 0
 22 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 11 0 0
 13 0 0
 12 0 0
 10 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 25 0 0
 23 0 0
 43 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 45 0 0
 25 0 0
 43 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 43 0 0
 21 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 27 0 0
 45 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 45 0 0
 43 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 45 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 19 0 0
 41 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 47 0 0
 29 0 0
 41 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 47 0 0
 41 0 0
 17 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 31 0 0
 47 0 0
 17 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 1 0 0
 15 0 0
 39 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 1 0 0
 39 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 39 0 0
 13 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 13 0 0
 3 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 13 0 0
 11 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 11 0 0
 37 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 37 0 0
 35 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 35 0 0
 5 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 37 0 0
 9 0 0
 35 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 9 0 0
 7 0 0
 35 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 1 0 0
 0 0 0
 30 0 0
 31 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 27 0 0
 29 0 0
 28 0 0
 26 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 7 0 0
 9 0 0
 8 0 0
 6 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 3 0 0
 5 0 0
 4 0 0
 2 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 42 0 0
 22 0 0
 24 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 42 0 0
 24 0 0
 44 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 20 0 0
 42 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 44 0 0
 26 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 42 0 0
 44 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 44 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 40 0 0
 18 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 40 0 0
 28 0 0
 46 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 16 0 0
 40 0 0
 46 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 16 0 0
 46 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 14 0 0
 16 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 14 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 38 0 0
 14 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 33 0 0
 38 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 33 0 0
 12 0 0
 38 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 33 0 0
 2 0 0
 12 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 10 0 0
 12 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 36 0 0
 10 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 34 0 0
 36 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 4 0 0
 34 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 34 0 0
 8 0 0
 36 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 34 0 0
 6 0 0
@@ -850,13 +852,13 @@ numvert 4
 0.0095 -0.01805 -0.00781
 numsurf 2
 SURF 0X20
-mat 0
+mat 2
 refs 3
 3 0 0
 2 0 0
 1 0 0
 SURF 0X20
-mat 0
+mat 2
 refs 3
 0 0 0
 3 0 0
@@ -918,421 +920,421 @@ numvert 48
 0.0135 -0.01831 -0.00208
 numsurf 66
 SURF 0X30
-mat 0
+mat 1
 refs 4
 32 0 0
 3 0 0
 2 0 0
 33 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 35 0 0
 7 0 0
 6 0 0
 34 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 37 0 0
 11 0 0
 10 0 0
 36 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 39 0 0
 15 0 0
 14 0 0
 38 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 47 0 0
 31 0 0
 30 0 0
 46 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 41 0 0
 19 0 0
 18 0 0
 40 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 43 0 0
 23 0 0
 22 0 0
 42 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 45 0 0
 27 0 0
 26 0 0
 44 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 19 0 0
 21 0 0
 20 0 0
 18 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 9 0 0
 37 0 0
 36 0 0
 8 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 5 0 0
 35 0 0
 34 0 0
 4 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 33 0 0
 0 0 0
 1 0 0
 32 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 15 0 0
 17 0 0
 16 0 0
 14 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 13 0 0
 39 0 0
 38 0 0
 12 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 29 0 0
 47 0 0
 46 0 0
 28 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 17 0 0
 41 0 0
 40 0 0
 16 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 21 0 0
 43 0 0
 42 0 0
 20 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 25 0 0
 45 0 0
 44 0 0
 24 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 23 0 0
 25 0 0
 24 0 0
 22 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 11 0 0
 13 0 0
 12 0 0
 10 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 25 0 0
 23 0 0
 43 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 45 0 0
 25 0 0
 43 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 43 0 0
 21 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 27 0 0
 45 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 45 0 0
 43 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 45 0 0
 19 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 29 0 0
 19 0 0
 41 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 47 0 0
 29 0 0
 41 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 47 0 0
 41 0 0
 17 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 31 0 0
 47 0 0
 17 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 1 0 0
 15 0 0
 39 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 1 0 0
 39 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 39 0 0
 13 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 13 0 0
 3 0 0
 32 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 13 0 0
 11 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 11 0 0
 37 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 37 0 0
 35 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 35 0 0
 5 0 0
 3 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 37 0 0
 9 0 0
 35 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 9 0 0
 7 0 0
 35 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 1 0 0
 0 0 0
 30 0 0
 31 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 27 0 0
 29 0 0
 28 0 0
 26 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 7 0 0
 9 0 0
 8 0 0
 6 0 0
 SURF 0X30
-mat 0
+mat 1
 refs 4
 3 0 0
 5 0 0
 4 0 0
 2 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 42 0 0
 22 0 0
 24 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 42 0 0
 24 0 0
 44 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 20 0 0
 42 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 44 0 0
 26 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 42 0 0
 44 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 18 0 0
 44 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 40 0 0
 18 0 0
 28 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 40 0 0
 28 0 0
 46 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 16 0 0
 40 0 0
 46 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 16 0 0
 46 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 14 0 0
 16 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 14 0 0
 30 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 38 0 0
 14 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 0 0 0
 33 0 0
 38 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 33 0 0
 12 0 0
 38 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 33 0 0
 2 0 0
 12 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 10 0 0
 12 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 36 0 0
 10 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 34 0 0
 36 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 2 0 0
 4 0 0
 34 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 34 0 0
 8 0 0
 36 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
 34 0 0
 6 0 0
@@ -1350,13 +1352,13 @@ numvert 4
 0.0135 -0.01902 -0.0029
 numsurf 2
 SURF 0X20
-mat 0
+mat 2
 refs 3
 3 0 0
 2 0 0
 1 0 0
 SURF 0X20
-mat 0
+mat 2
 refs 3
 0 0 0
 3 0 0
