--- a/Models/Instruments/ND/tcas.ac
+++ b/Models/Instruments/ND/tcas.ac
@@ -1,8 +1,8 @@
 AC3Db
-MATERIAL "Black.002" rgb 0.020 0.020 0.020  amb 0.010 0.010 0.010  emis 0.000 0.000 0.000  spec 0.000 0.000 0.000  shi 20 trans 0.000
-MATERIAL "Material.002" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
+MATERIAL "Black.002" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.040 0.040 0.040  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "Material.002" rgb 0.163 0.163 0.163  amb 0.100 0.100 0.100  emis 0.1 0.1 0.1  spec 0.500 0.500 0.500  shi 32 trans 0.000
 MATERIAL "Lit" rgb 0.300 0.350 0.450  amb 0.367 0.367 0.367  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 20 trans 0.000
-MATERIAL "Gauge.001" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 1.000 1.000 1.000  shi 32 trans 0.000
+MATERIAL "Gauge.001" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 1.000 1.000 1.000  spec 1.000 1.000 1.000  shi 32 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__tcas.ac"
 kids 3
@@ -76,7 +76,7 @@ numvert 64
 0.015 -0.02808 -0.02758
 0.005 -0.02723 -0.02804
 0.015 -0.02723 -0.02804
-numsurf 92
+numsurf 90
 SURF 0X30
 mat 0
 refs 4
@@ -239,428 +239,440 @@ refs 4
 47 0 0
 46 0 0
 SURF 0X30
+mat 0
+refs 4
+46 0 0
+47 0 0
+49 0 0
+48 0 0
+SURF 0X30
+mat 0
+refs 4
+48 0 0
+49 0 0
+51 0 0
+50 0 0
+SURF 0X30
+mat 0
+refs 4
+50 0 0
+51 0 0
+53 0 0
+52 0 0
+SURF 0X30
+mat 0
+refs 4
+52 0 0
+53 0 0
+55 0 0
+54 0 0
+SURF 0X30
+mat 0
+refs 4
+54 0 0
+55 0 0
+57 0 0
+56 0 0
+SURF 0X30
+mat 0
+refs 4
+56 0 0
+57 0 0
+59 0 0
+58 0 0
+SURF 0X30
+mat 0
+refs 4
+58 0 0
+59 0 0
+61 0 0
+60 0 0
+SURF 0X20
+mat 0
+refs 3
+51 0 0
+49 0 0
+47 0 0
+SURF 0X20
+mat 0
+refs 3
+51 0 0
+47 0 0
+45 0 0
+SURF 0X20
+mat 0
+refs 3
+53 0 0
+51 0 0
+45 0 0
+SURF 0X20
+mat 0
+refs 3
+53 0 0
+45 0 0
+43 0 0
+SURF 0X20
+mat 0
+refs 3
+55 0 0
+53 0 0
+43 0 0
+SURF 0X20
+mat 0
+refs 3
+55 0 0
+43 0 0
+41 0 0
+SURF 0X20
+mat 0
+refs 3
+57 0 0
+55 0 0
+41 0 0
+SURF 0X20
+mat 0
+refs 3
+57 0 0
+41 0 0
+39 0 0
+SURF 0X20
+mat 0
+refs 3
+59 0 0
+57 0 0
+39 0 0
+SURF 0X20
+mat 0
+refs 3
+59 0 0
+39 0 0
+37 0 0
+SURF 0X20
+mat 0
+refs 3
+61 0 0
+59 0 0
+37 0 0
+SURF 0X20
+mat 0
+refs 3
+61 0 0
+37 0 0
+35 0 0
+SURF 0X20
+mat 0
+refs 3
+63 0 0
+61 0 0
+35 0 0
+SURF 0X20
+mat 0
+refs 3
+63 0 0
+35 0 0
+33 0 0
+SURF 0X20
+mat 0
+refs 3
+1 0 0
+63 0 0
+33 0 0
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+31 0 0
+29 0 0
+SURF 0X20
+mat 0
+refs 3
+3 0 0
+29 0 0
+5 0 0
+SURF 0X20
+mat 0
+refs 3
+29 0 0
+27 0 0
+5 0 0
+SURF 0X20
+mat 0
+refs 3
+27 0 0
+7 0 0
+5 0 0
+SURF 0X20
+mat 0
+refs 3
+27 0 0
+25 0 0
+7 0 0
+SURF 0X20
+mat 0
+refs 3
+25 0 0
+9 0 0
+7 0 0
+SURF 0X20
+mat 0
+refs 3
+25 0 0
+23 0 0
+9 0 0
+SURF 0X20
+mat 0
+refs 3
+23 0 0
+11 0 0
+9 0 0
+SURF 0X20
+mat 0
+refs 3
+23 0 0
+13 0 0
+11 0 0
+SURF 0X20
+mat 0
+refs 3
+23 0 0
+21 0 0
+13 0 0
+SURF 0X20
+mat 0
+refs 3
+21 0 0
+19 0 0
+13 0 0
+SURF 0X20
+mat 0
+refs 3
+19 0 0
+15 0 0
+13 0 0
+SURF 0X20
+mat 0
+refs 3
+19 0 0
+17 0 0
+15 0 0
+SURF 0X30
+mat 0
+refs 4
+1 0 0
+0 0 0
+62 0 0
+63 0 0
+SURF 0X30
+mat 0
+refs 4
+60 0 0
+61 0 0
+63 0 0
+62 0 0
+SURF 0X20
+mat 0
+refs 3
+46 0 0
+48 0 0
+50 0 0
+SURF 0X20
+mat 0
+refs 3
+44 0 0
+46 0 0
+50 0 0
+SURF 0X20
+mat 0
+refs 3
+44 0 0
+50 0 0
+52 0 0
+SURF 0X20
+mat 0
+refs 3
+42 0 0
+44 0 0
+52 0 0
+SURF 0X20
+mat 0
+refs 3
+42 0 0
+52 0 0
+54 0 0
+SURF 0X20
+mat 0
+refs 3
+40 0 0
+42 0 0
+54 0 0
+SURF 0X20
+mat 0
+refs 3
+40 0 0
+54 0 0
+56 0 0
+SURF 0X20
+mat 0
+refs 3
+38 0 0
+40 0 0
+56 0 0
+SURF 0X20
+mat 0
+refs 3
+38 0 0
+56 0 0
+58 0 0
+SURF 0X20
+mat 0
+refs 3
+36 0 0
+38 0 0
+58 0 0
+SURF 0X20
+mat 0
+refs 3
+36 0 0
+58 0 0
+60 0 0
+SURF 0X20
+mat 0
+refs 3
+34 0 0
+36 0 0
+60 0 0
+SURF 0X20
+mat 0
+refs 3
+34 0 0
+60 0 0
+62 0 0
+SURF 0X20
+mat 0
+refs 3
+32 0 0
+34 0 0
+62 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+32 0 0
+62 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+30 0 0
+32 0 0
+SURF 0X20
+mat 0
+refs 3
+0 0 0
+2 0 0
+30 0 0
+SURF 0X20
+mat 0
+refs 3
+2 0 0
+28 0 0
+30 0 0
+SURF 0X20
+mat 0
+refs 3
+2 0 0
+4 0 0
+28 0 0
+SURF 0X20
+mat 0
+refs 3
+4 0 0
+26 0 0
+28 0 0
+SURF 0X20
+mat 0
+refs 3
+4 0 0
+6 0 0
+26 0 0
+SURF 0X20
+mat 0
+refs 3
+6 0 0
+24 0 0
+26 0 0
+SURF 0X20
+mat 0
+refs 3
+6 0 0
+8 0 0
+24 0 0
+SURF 0X20
+mat 0
+refs 3
+8 0 0
+22 0 0
+24 0 0
+SURF 0X20
+mat 0
+refs 3
+8 0 0
+10 0 0
+22 0 0
+SURF 0X20
+mat 0
+refs 3
+10 0 0
+12 0 0
+22 0 0
+SURF 0X20
+mat 0
+refs 3
+12 0 0
+20 0 0
+22 0 0
+SURF 0X20
+mat 0
+refs 3
+12 0 0
+18 0 0
+20 0 0
+SURF 0X20
+mat 0
+refs 3
+12 0 0
+14 0 0
+18 0 0
+SURF 0X20
+mat 0
+refs 3
+14 0 0
+16 0 0
+18 0 0
+kids 1
+OBJECT poly
+name "Adjust.001"
+data 15
+Adjust.mesh.000
+crease 40.0
+numvert 4
+0.015 -0.02646 -0.02866
+0.015 -0.02584 -0.02942
+0.015 -0.03277 -0.03635
+0.015 -0.03354 -0.03573
+numsurf 2
+SURF 0X20
 mat 1
-refs 4
-46 0 0
-47 0 0
-49 0 0
-48 0 0
-SURF 0X30
-mat 0
-refs 4
-48 0 0
-49 0 0
-51 0 0
-50 0 0
-SURF 0X30
-mat 0
-refs 4
-50 0 0
-51 0 0
-53 0 0
-52 0 0
-SURF 0X30
-mat 0
-refs 4
-52 0 0
-53 0 0
-55 0 0
-54 0 0
-SURF 0X30
-mat 0
-refs 4
-54 0 0
-55 0 0
-57 0 0
-56 0 0
-SURF 0X30
-mat 0
-refs 4
-56 0 0
-57 0 0
-59 0 0
-58 0 0
-SURF 0X30
-mat 0
-refs 4
-58 0 0
-59 0 0
-61 0 0
-60 0 0
-SURF 0X20
-mat 0
-refs 3
-51 0 0
-49 0 0
-47 0 0
-SURF 0X20
-mat 0
-refs 3
-51 0 0
-47 0 0
-45 0 0
-SURF 0X20
-mat 0
-refs 3
-53 0 0
-51 0 0
-45 0 0
-SURF 0X20
-mat 0
-refs 3
-53 0 0
-45 0 0
-43 0 0
-SURF 0X20
-mat 0
-refs 3
-55 0 0
-53 0 0
-43 0 0
-SURF 0X20
-mat 0
-refs 3
-55 0 0
-43 0 0
-41 0 0
-SURF 0X20
-mat 0
-refs 3
-57 0 0
-55 0 0
-41 0 0
-SURF 0X20
-mat 0
-refs 3
-57 0 0
-41 0 0
-39 0 0
-SURF 0X20
-mat 0
-refs 3
-59 0 0
-57 0 0
-39 0 0
-SURF 0X20
-mat 0
-refs 3
-59 0 0
-39 0 0
-37 0 0
-SURF 0X20
-mat 0
-refs 3
-61 0 0
-59 0 0
-37 0 0
-SURF 0X20
-mat 0
-refs 3
-61 0 0
-37 0 0
-35 0 0
-SURF 0X20
-mat 0
-refs 3
-63 0 0
-61 0 0
-35 0 0
-SURF 0X20
-mat 0
-refs 3
-63 0 0
-35 0 0
-33 0 0
-SURF 0X20
-mat 0
-refs 3
-1 0 0
-63 0 0
-33 0 0
-SURF 0X20
-mat 0
-refs 3
-1 0 0
-33 0 0
-31 0 0
-SURF 0X20
-mat 0
-refs 3
-3 0 0
-1 0 0
-31 0 0
-SURF 0X20
-mat 0
-refs 3
-3 0 0
-31 0 0
-29 0 0
-SURF 0X20
-mat 0
-refs 3
-3 0 0
-29 0 0
-5 0 0
-SURF 0X20
-mat 0
-refs 3
-29 0 0
-27 0 0
-5 0 0
-SURF 0X20
-mat 0
-refs 3
-27 0 0
-7 0 0
-5 0 0
-SURF 0X20
-mat 0
-refs 3
-27 0 0
-25 0 0
-7 0 0
-SURF 0X20
-mat 0
-refs 3
-25 0 0
-9 0 0
-7 0 0
-SURF 0X20
-mat 0
-refs 3
-25 0 0
-23 0 0
-9 0 0
-SURF 0X20
-mat 0
-refs 3
-23 0 0
-11 0 0
-9 0 0
-SURF 0X20
-mat 0
-refs 3
-23 0 0
-13 0 0
-11 0 0
-SURF 0X20
-mat 0
-refs 3
-23 0 0
-21 0 0
-13 0 0
-SURF 0X20
-mat 0
-refs 3
-21 0 0
-19 0 0
-13 0 0
-SURF 0X20
-mat 0
-refs 3
-19 0 0
-15 0 0
-13 0 0
-SURF 0X20
-mat 0
-refs 3
-19 0 0
-17 0 0
-15 0 0
-SURF 0X30
-mat 0
-refs 4
-1 0 0
-0 0 0
-62 0 0
-63 0 0
-SURF 0X30
-mat 0
-refs 4
-60 0 0
-61 0 0
-63 0 0
-62 0 0
-SURF 0X20
-mat 0
-refs 3
-46 0 0
-48 0 0
-50 0 0
-SURF 0X20
-mat 0
-refs 3
-44 0 0
-46 0 0
-50 0 0
-SURF 0X20
-mat 0
-refs 3
-44 0 0
-50 0 0
-52 0 0
-SURF 0X20
-mat 0
-refs 3
-42 0 0
-44 0 0
-52 0 0
-SURF 0X20
-mat 0
-refs 3
-42 0 0
-52 0 0
-54 0 0
-SURF 0X20
-mat 0
-refs 3
-40 0 0
-42 0 0
-54 0 0
-SURF 0X20
-mat 0
-refs 3
-40 0 0
-54 0 0
-56 0 0
-SURF 0X20
-mat 0
-refs 3
-38 0 0
-40 0 0
-56 0 0
-SURF 0X20
-mat 0
-refs 3
-38 0 0
-56 0 0
-58 0 0
-SURF 0X20
-mat 0
-refs 3
-36 0 0
-38 0 0
-58 0 0
-SURF 0X20
-mat 0
-refs 3
-36 0 0
-58 0 0
-60 0 0
-SURF 0X20
-mat 0
-refs 3
-34 0 0
-36 0 0
-60 0 0
-SURF 0X20
-mat 0
-refs 3
-34 0 0
-60 0 0
-62 0 0
-SURF 0X20
-mat 0
-refs 3
-32 0 0
-34 0 0
-62 0 0
-SURF 0X20
-mat 0
 refs 3
 0 0 0
-32 0 0
-62 0 0
+3 0 0
+2 0 0
 SURF 0X20
-mat 0
+mat 1
 refs 3
-0 0 0
-30 0 0
-32 0 0
-SURF 0X20
-mat 0
-refs 3
+1 0 0
 0 0 0
 2 0 0
-30 0 0
-SURF 0X20
-mat 0
-refs 3
-2 0 0
-28 0 0
-30 0 0
-SURF 0X20
-mat 0
-refs 3
-2 0 0
-4 0 0
-28 0 0
-SURF 0X20
-mat 0
-refs 3
-4 0 0
-26 0 0
-28 0 0
-SURF 0X20
-mat 0
-refs 3
-4 0 0
-6 0 0
-26 0 0
-SURF 0X20
-mat 0
-refs 3
-6 0 0
-24 0 0
-26 0 0
-SURF 0X20
-mat 0
-refs 3
-6 0 0
-8 0 0
-24 0 0
-SURF 0X20
-mat 0
-refs 3
-8 0 0
-22 0 0
-24 0 0
-SURF 0X20
-mat 0
-refs 3
-8 0 0
-10 0 0
-22 0 0
-SURF 0X20
-mat 0
-refs 3
-10 0 0
-12 0 0
-22 0 0
-SURF 0X20
-mat 0
-refs 3
-12 0 0
-20 0 0
-22 0 0
-SURF 0X20
-mat 0
-refs 3
-12 0 0
-18 0 0
-20 0 0
-SURF 0X20
-mat 0
-refs 3
-12 0 0
-14 0 0
-18 0 0
-SURF 0X20
-mat 0
-refs 3
-14 0 0
-16 0 0
-18 0 0
 kids 0
 OBJECT poly
 name "Frame"
