--- a/Models/Cockpit/Models/enginenozzle4.ac
+++ b/Models/Cockpit/Models/enginenozzle4.ac
@@ -1,18 +1,18 @@
 AC3Db
-MATERIAL "Black" rgb 0.000 0.000 0.000  amb 0.000 0.000 0.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "aft" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
-MATERIAL "Yellow.001" rgb 1.000 1.000 0.000  amb 0.667 0.667 0.667  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.008" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.150 0.150 0.150  shi 32 trans 0.000
-MATERIAL "Guage.008" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "White.007" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Guage.009" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "aft.001" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
+MATERIAL "Yellow.000" rgb 1.000 1.000 0.000  amb 0.667 0.667 0.667  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Horizon2.009" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.006" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "Guage.005" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "White.010" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "Guage.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 OBJECT world
-name "Blender_exporter_v2.19__enginenozzle4.ac"
-kids 9
+name "Blender_exporter_v2.22__enginenozzle4.ac"
+kids 10
 OBJECT poly
 name "AreaAdjust"
-data 15
-AreaAdjust.mesh
+data 19
+AreaAdjust.mesh.001
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -51,281 +51,281 @@ numvert 32
 0.006 0.02445 0.01981
 numsurf 44
 SURF 0X30
-mat 1
+mat 0
 refs 4
 0 0 0
 1 0 0
 3 0 0
 2 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 2 0 0
 3 0 0
 5 0 0
 4 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 4 0 0
 5 0 0
 7 0 0
 6 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 6 0 0
 7 0 0
 9 0 0
 8 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 8 0 0
 9 0 0
 11 0 0
 10 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 10 0 0
 11 0 0
 13 0 0
 12 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 12 0 0
 13 0 0
 15 0 0
 14 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 14 0 0
 15 0 0
 17 0 0
 16 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 16 0 0
 17 0 0
 19 0 0
 18 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 18 0 0
 19 0 0
 21 0 0
 20 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 20 0 0
 21 0 0
 23 0 0
 22 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 22 0 0
 23 0 0
 25 0 0
 24 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 24 0 0
 25 0 0
 27 0 0
 26 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 26 0 0
 27 0 0
 29 0 0
 28 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 27 0 0
 25 0 0
 23 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 27 0 0
 23 0 0
 21 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 29 0 0
 27 0 0
 21 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 29 0 0
 21 0 0
 19 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 31 0 0
 29 0 0
 19 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 31 0 0
 19 0 0
 17 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 1 0 0
 31 0 0
 17 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 3 0 0
 1 0 0
 17 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 3 0 0
 17 0 0
 15 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 3 0 0
 15 0 0
 5 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 15 0 0
 13 0 0
 5 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 13 0 0
 11 0 0
 5 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 11 0 0
 7 0 0
 5 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 11 0 0
 9 0 0
 7 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 1 0 0
 0 0 0
 30 0 0
 31 0 0
 SURF 0X30
-mat 1
+mat 0
 refs 4
 28 0 0
 29 0 0
 31 0 0
 30 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 22 0 0
 24 0 0
 26 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 20 0 0
 22 0 0
 26 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 20 0 0
 26 0 0
 28 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 18 0 0
 20 0 0
 28 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 18 0 0
 28 0 0
 30 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 16 0 0
 18 0 0
 30 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 0 0 0
 16 0 0
 30 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 0 0 0
 2 0 0
 16 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 2 0 0
 14 0 0
 16 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 2 0 0
 4 0 0
 14 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 4 0 0
 12 0 0
 14 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 4 0 0
 10 0 0
 12 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 4 0 0
 6 0 0
 10 0 0
 SURF 0X20
-mat 1
+mat 0
 refs 3
 6 0 0
 8 0 0
@@ -333,8 +333,8 @@ refs 3
 kids 0
 OBJECT poly
 name "AreaBug"
-data 12
-AreaBug.mesh
+data 16
+AreaBug.mesh.001
 crease 40.0
 numvert 6
 0.0025 -0.01142 0.02377
@@ -345,33 +345,33 @@ numvert 6
 0.0035 -0.01165 0.02017
 numsurf 5
 SURF 0X20
-mat 2
+mat 1
 refs 3
 0 0 0
 4 0 0
 1 0 0
 SURF 0X20
-mat 2
+mat 1
 refs 3
 2 0 0
 5 0 0
 3 0 0
 SURF 0X20
-mat 2
+mat 1
 refs 4
 0 0 0
 3 0 0
 5 0 0
 4 0 0
 SURF 0X20
-mat 2
+mat 1
 refs 4
 3 0 0
 0 0 0
 1 0 0
 2 0 0
 SURF 0X20
-mat 2
+mat 1
 refs 4
 2 0 0
 1 0 0
@@ -379,9 +379,30 @@ refs 4
 5 0 0
 kids 0
 OBJECT poly
+name "FF"
+data 18
+GSWarning.mesh.009
+crease 40.0
+texture "vor-3d.png"
+texrep 1 1
+numvert 4
+0.00243 0.00754 -0.01406
+0.00243 0.01293 -0.00815
+0.00243 0.0223 -0.02755
+0.00243 0.0277 -0.02164
+numsurf 1
+SURF 0X20
+mat 2
+refs 4
+1 0.097632 0.500819
+0 0.097658 0.302806
+2 0.295041 0.302807
+3 0.295015 0.500819
+kids 0
+OBJECT poly
 name "Frame"
 data 14
-Frame.mesh.009
+Frame.mesh.006
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -951,7 +972,7 @@ kids 0
 OBJECT poly
 name "Frame2"
 data 15
-Frame2.mesh.007
+Frame2.mesh.009
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -1105,7 +1126,7 @@ kids 0
 OBJECT poly
 name "Guage"
 data 14
-Guage.mesh.007
+Guage.mesh.005
 crease 40.0
 texture "concorde-nozzle.png"
 texrep 1 1
@@ -1126,7 +1147,7 @@ kids 0
 OBJECT poly
 name "Needle"
 data 15
-Needle.mesh.007
+Needle.mesh.008
 crease 40.0
 numvert 10
 0.0025 -0.00087 -0.0005
@@ -1212,7 +1233,7 @@ kids 0
 OBJECT poly
 name "Num1"
 data 13
-Num1.mesh.007
+Num1.mesh.008
 crease 40.0
 texture "numbers.png"
 texrep 1 1
@@ -1534,7 +1555,7 @@ kids 0
 OBJECT poly
 name "Num2"
 data 13
-Num2.mesh.007
+Num2.mesh.008
 crease 40.0
 texture "numbers.png"
 texrep 1 1
@@ -1856,7 +1877,7 @@ kids 0
 OBJECT poly
 name "Num3"
 data 13
-Num3.mesh.007
+Num3.mesh.008
 crease 40.0
 texture "numbers.png"
 texrep 1 1
