ALS instruments illumination

--- a/Models/Cockpit/Models/engineegt.ac
+++ b/Models/Cockpit/Models/engineegt.ac
@@ -2,15 +2,15 @@ AC3Db
 MATERIAL "Horizon2.000" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 MATERIAL "Frame.007" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
 MATERIAL "Guage.007" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "White.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "White.001" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
 MATERIAL "Number.005" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 50 trans 0.000
 OBJECT world
-name "Blender_exporter_v2.22__engineegt.ac"
+name "Blender_exporter_v2.19__engineegt.ac"
 kids 8
 OBJECT poly
 name "FF"
 data 18
-GSWarning.mesh.000
+GSWarning.mesh.003
 crease 40.0
 texture "vor-3d.png"
 texrep 1 1
@@ -778,6 +778,8 @@ name "Needle"
 data 15
 Needle.mesh.006
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 10
 0.0025 -0 0.001
 0.0025 0 -0.001
@@ -793,71 +795,71 @@ numsurf 10
 SURF 0X20
 mat 3
 refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
+1 0.828563 0.742387
+0 0.811241 0.742387
+4 0.811241 0.932925
+5 0.828563 0.932925
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 0.828563 0.932925
+6 0.828563 0.932925
+2 0.828563 0.742387
+1 0.828563 0.742387
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.828563 0.932925
+7 0.811241 0.932925
+3 0.811241 0.742387
+2 0.828563 0.742387
 SURF 0X20
 mat 3
 refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+0 0.811241 0.742387
+3 0.811241 0.742387
+7 0.811241 0.932925
+4 0.811241 0.932925
 SURF 0X20
 mat 3
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
+0 0.811241 0.742387
+1 0.828563 0.742387
+2 0.828563 0.742387
+3 0.811241 0.742387
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.811241 0.932925
+6 0.828563 0.932925
+5 0.828563 0.932925
+4 0.811241 0.932925
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-9 0 0
-8 0 0
-4 0 0
+7 0.811241 0.932925
+9 0.819902 0.941586
+8 0.819902 0.941586
+4 0.811241 0.932925
 SURF 0X20
 mat 3
 refs 4
-8 0 0
-9 0 0
-6 0 0
-5 0 0
+8 0.819902 0.941586
+9 0.819902 0.941586
+6 0.828563 0.932925
+5 0.828563 0.932925
 SURF 0X20
 mat 3
 refs 3
-4 0 0
-8 0 0
-5 0 0
+4 0.811241 0.932925
+8 0.819902 0.941586
+5 0.828563 0.932925
 SURF 0X20
 mat 3
 refs 3
-6 0 0
-9 0 0
-7 0 0
+6 0.828563 0.932925
+9 0.819902 0.941586
+7 0.811241 0.932925
 kids 0
 OBJECT poly
 name "Num1"
