--- a/Models/Cockpit/Models/vsi.ac
+++ b/Models/Cockpit/Models/vsi.ac
@@ -1,17 +1,19 @@
 AC3Db
-MATERIAL "Yellow.004" rgb 1.000 0.200 0.000  amb 0.800 0.100 0.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Horizon2.019" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.013" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "Yellow.005" rgb 1.000 0.200 0.000  amb 0.300 0.300 0.300  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Horizon2.023" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.020" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
 MATERIAL "Gauge.005" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 MATERIAL "Gauge.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 OBJECT world
-name "Blender_exporter_v2.22__vsi.ac"
+name "Blender_exporter_v2.19__vsi.ac"
 kids 5
 OBJECT poly
 name "Current"
 data 12
 Current.mesh
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 12
 0 -0.0002 -0.007
 0 -0.005 -0.012
@@ -29,78 +31,78 @@ numsurf 10
 SURF 0X20
 mat 0
 refs 4
-0 0 0
-3 0 0
-9 0 0
-8 0 0
+0 0.068855 0.639589
+3 0.068855 0.639589
+9 0.056439 0.639589
+8 0.056439 0.639589
 SURF 0X20
 mat 0
 refs 4
-5 0 0
-6 0 0
-3 0 0
-2 0 0
+5 0.073822 0.644754
+6 0.068855 0.639986
+3 0.068855 0.639589
+2 0.073822 0.634821
 SURF 0X20
 mat 0
 refs 4
-0 0 0
-7 0 0
-4 0 0
-1 0 0
+0 0.068855 0.639589
+7 0.068855 0.639986
+4 0.073822 0.644754
+1 0.073822 0.634821
 SURF 0X20
 mat 0
 refs 4
-4 0 0
-5 0 0
-2 0 0
-1 0 0
+4 0.073822 0.644754
+5 0.073822 0.644754
+2 0.073822 0.634821
+1 0.073822 0.634821
 SURF 0X20
 mat 0
 refs 4
-3 0 0
-0 0 0
-1 0 0
-2 0 0
+3 0.068855 0.639589
+0 0.068855 0.639589
+1 0.073822 0.634821
+2 0.073822 0.634821
 SURF 0X20
 mat 0
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.068855 0.639986
+6 0.068855 0.639986
+5 0.073822 0.644754
+4 0.073822 0.644754
 SURF 0X20
 mat 0
 refs 4
-11 0 0
-8 0 0
-9 0 0
-10 0 0
+11 0.056439 0.639986
+8 0.056439 0.639589
+9 0.056439 0.639589
+10 0.056439 0.639986
 SURF 0X20
 mat 0
 refs 4
-10 0 0
-9 0 0
-3 0 0
-6 0 0
+10 0.056439 0.639986
+9 0.056439 0.639589
+3 0.068855 0.639589
+6 0.068855 0.639986
 SURF 0X20
 mat 0
 refs 4
-7 0 0
-0 0 0
-8 0 0
-11 0 0
+7 0.068855 0.639986
+0 0.068855 0.639589
+8 0.056439 0.639589
+11 0.056439 0.639986
 SURF 0X20
 mat 0
 refs 4
-6 0 0
-7 0 0
-11 0 0
-10 0 0
+6 0.068855 0.639986
+7 0.068855 0.639986
+11 0.056439 0.639986
+10 0.056439 0.639986
 kids 0
 OBJECT poly
 name "FF"
 data 18
-GSWarning.mesh.016
+GSWarning.mesh.022
 crease 40.0
 texture "vor-3d.png"
 texrep 1 1
@@ -132,7 +134,7 @@ kids 0
 OBJECT poly
 name "Frame"
 data 14
-Frame.mesh.014
+Frame.mesh.021
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -217,7 +219,7 @@ kids 0
 OBJECT poly
 name "Guage"
 data 14
-Guage.mesh.007
+Guage.mesh.021
 crease 40.0
 texture "concorde-vsi.png"
 texrep 1 1
@@ -240,6 +242,8 @@ name "Set"
 data 8
 Set.mesh
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 6
 0 -0 0.006
 0 -0.005 0.012
@@ -251,34 +255,34 @@ numsurf 5
 SURF 0X20
 mat 4
 refs 4
-1 0 0
-2 0 0
-5 0 0
-4 0 0
+1 0.809896 0.831055
+2 0.809896 0.831055
+5 0.809896 0.856116
+4 0.809896 0.856116
 SURF 0X20
 mat 4
 refs 4
-3 0 0
-2 0 0
-1 0 0
-0 0 0
+3 0.824933 0.843586
+2 0.809896 0.831055
+1 0.809896 0.831055
+0 0.824933 0.843586
 SURF 0X20
 mat 4
 refs 3
-2 0 0
-3 0 0
-5 0 0
+2 0.809896 0.831055
+3 0.824933 0.843586
+5 0.809896 0.856116
 SURF 0X20
 mat 4
 refs 3
-1 0 0
-4 0 0
-0 0 0
+1 0.809896 0.831055
+4 0.809896 0.856116
+0 0.824933 0.843586
 SURF 0X20
 mat 4
 refs 4
-5 0 0
-3 0 0
-0 0 0
-4 0 0
+5 0.809896 0.856116
+3 0.824933 0.843586
+0 0.824933 0.843586
+4 0.809896 0.856116
 kids 0
