--- a/Models/Cockpit/Models/ctrl.ac
+++ b/Models/Cockpit/Models/ctrl.ac
@@ -1,9 +1,9 @@
 AC3Db
+MATERIAL "Yellow.003" rgb 0.800 0.800 0.000  amb 0.267 0.267 0.267  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.004" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "Material.003" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
 MATERIAL "DefaultWhite" rgb 1.000 1.000 1.000  amb 0.200 0.200 0.200  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 10 trans 0.000
-MATERIAL "Yellow" rgb 0.800 0.800 0.000  amb 0.4 0.4 0.0  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.002" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
-MATERIAL "Material.002" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
-MATERIAL "Horizon2.001" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Horizon2.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__ctrl.ac"
 kids 13
@@ -12,6 +12,8 @@ name "B1"
 data 10
 GSBar.mesh
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 0.03726
 0.0036 -0.00527 0.03726
@@ -19,18 +21,20 @@ numvert 4
 0.0036 -0.00527 0.02501
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "B2"
 data 14
 GSBar.mesh.001
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 0.02471
 0.0036 -0.00527 0.02471
@@ -38,18 +42,20 @@ numvert 4
 0.0036 -0.00527 0.01246
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "B3"
 data 14
 GSBar.mesh.002
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 0.01206
 0.0036 -0.00527 0.01206
@@ -57,18 +63,20 @@ numvert 4
 0.0036 -0.00527 -0.00018
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "B4"
 data 14
 GSBar.mesh.003
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 0.0001
 0.0036 -0.00527 0.0001
@@ -76,18 +84,20 @@ numvert 4
 0.0036 -0.00527 -0.01215
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "B5"
 data 14
 GSBar.mesh.004
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 -0.01255
 0.0036 -0.00527 -0.01255
@@ -95,18 +105,20 @@ numvert 4
 0.0036 -0.00527 -0.02479
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "B6"
 data 14
 GSBar.mesh.005
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 4
 0.0036 -0.00427 -0.02509
 0.0036 -0.00527 -0.02509
@@ -114,17 +126,17 @@ numvert 4
 0.0036 -0.00527 -0.03734
 numsurf 1
 SURF 0X20
-mat 1
+mat 0
 refs 4
-0 0 0
-1 0 0
-3 0 0
-2 0 0
+0 0.327431 0.611222
+1 0.327431 0.605208
+3 0.401108 0.605208
+2 0.401108 0.611222
 kids 0
 OBJECT poly
 name "Frame"
 data 14
-Frame.mesh.001
+Frame.mesh.002
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -139,42 +151,42 @@ numvert 8
 0.00272 0.05093 0.04896
 numsurf 6
 SURF 0X20
-mat 2
+mat 1
 refs 4
 1 0.215956 0.038734
 0 0.215956 0.137249
 4 0.245426 0.137249
 5 0.245426 0.038734
 SURF 0X20
-mat 2
+mat 1
 refs 4
 5 0.229824 0.140327
 6 0.231557 0.140327
 2 0.231557 0.035657
 1 0.229824 0.035657
 SURF 0X20
-mat 2
+mat 1
 refs 4
 6 0.692445 0.335239
 7 0.692445 0.548819
 3 0.633408 0.548819
 2 0.633408 0.335239
 SURF 0X20
-mat 2
+mat 1
 refs 4
 0 0.229824 0.035657
 3 0.231557 0.035657
 7 0.231557 0.140327
 4 0.229824 0.140327
 SURF 0X20
-mat 2
+mat 1
 refs 4
 0 0.229824 0.137249
 1 0.229824 0.038734
 2 0.231557 0.038734
 3 0.231557 0.137249
 SURF 0X20
-mat 2
+mat 1
 refs 4
 7 0.231557 0.137249
 6 0.231557 0.038734
@@ -184,7 +196,7 @@ kids 0
 OBJECT poly
 name "Frame.001"
 data 14
-Frame.mesh.000
+Frame.mesh.004
 crease 40.0
 texture "controls.png"
 texrep 1 1
@@ -199,42 +211,42 @@ numvert 8
 0.00335 0.0391 0.03759
 numsurf 6
 SURF 0X20
-mat 3
+mat 2
 refs 4
 1 0.081756 0.81719
 0 0.081756 0.972944
 4 0.128348 0.972944
 5 0.128348 0.81719
 SURF 0X20
-mat 3
+mat 2
 refs 4
 5 0.104316 0.977809
 6 0.107056 0.977809
 2 0.107056 0.812325
 1 0.104316 0.812325
 SURF 0X20
-mat 3
+mat 2
 refs 4
 6 1.000192 0.998755
 7 -0.000419 0.99843
 3 -0.000192 -0.001205
 2 1.000419 -0.00088
 SURF 0X20
-mat 3
+mat 2
 refs 4
 0 0.104316 0.812325
 3 0.107056 0.812325
 7 0.107056 0.977809
 4 0.104316 0.977809
 SURF 0X20
-mat 3
+mat 2
 refs 4
 0 0.104316 0.972944
 1 0.104316 0.81719
 2 0.107056 0.81719
 3 0.107056 0.972944
 SURF 0X20
-mat 3
+mat 2
 refs 4
 7 0.107056 0.972944
 6 0.107056 0.81719
@@ -244,7 +256,7 @@ kids 0
 OBJECT poly
 name "Frame.002"
 data 14
-Frame.mesh.002
+Frame.mesh.005
 crease 40.0
 texture "controls.png"
 texrep 1 1
@@ -259,42 +271,42 @@ numvert 8
 0.00335 0.04357 0.02089
 numsurf 6
 SURF 0X20
-mat 3
+mat 2
 refs 4
 1 0.481439 0.512906
 0 0.481439 0.519818
 4 0.483506 0.519818
 5 0.483506 0.512906
 SURF 0X20
-mat 3
+mat 2
 refs 4
 5 0.48244 0.520034
 6 0.482561 0.520034
 2 0.482561 0.51269
 1 0.48244 0.51269
 SURF 0X20
-mat 3
+mat 2
 refs 4
 6 0.522198 0.520964
 7 0.477792 0.52095
 3 0.477802 0.476586
 2 0.522208 0.476601
 SURF 0X20
-mat 3
+mat 2
 refs 4
 0 0.48244 0.51269
 3 0.482561 0.51269
 7 0.482561 0.520034
 4 0.48244 0.520034
 SURF 0X20
-mat 3
+mat 2
 refs 4
 0 0.48244 0.519818
 1 0.48244 0.512906
 2 0.482561 0.512906
 3 0.482561 0.519818
 SURF 0X20
-mat 3
+mat 2
 refs 4
 7 0.482561 0.519818
 6 0.482561 0.512906
@@ -325,84 +337,84 @@ numvert 16
 0.00395 0.02733 0.00417
 numsurf 12
 SURF 0X0
-mat 0
+mat 3
 refs 4
 0 0 0
 1 0 0
 3 0 0
 2 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 3 0 0
 7 0 0
 6 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 6 0 0
 7 0 0
 5 0 0
 4 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 4 0 0
 5 0 0
 1 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 6 0 0
 4 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 7 0 0
 3 0 0
 1 0 0
 5 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 8 0 0
 9 0 0
 11 0 0
 10 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 10 0 0
 11 0 0
 15 0 0
 14 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 14 0 0
 15 0 0
 13 0 0
 12 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 12 0 0
 13 0 0
 9 0 0
 8 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 10 0 0
 14 0 0
 12 0 0
 8 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 15 0 0
 11 0 0
@@ -449,168 +461,168 @@ numvert 32
 0.00395 0.02733 0.02969
 numsurf 24
 SURF 0X0
-mat 0
+mat 3
 refs 4
 0 0 0
 1 0 0
 3 0 0
 2 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 3 0 0
 7 0 0
 6 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 6 0 0
 7 0 0
 5 0 0
 4 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 4 0 0
 5 0 0
 1 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 6 0 0
 4 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 7 0 0
 3 0 0
 1 0 0
 5 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 8 0 0
 9 0 0
 11 0 0
 10 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 10 0 0
 11 0 0
 15 0 0
 14 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 14 0 0
 15 0 0
 13 0 0
 12 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 12 0 0
 13 0 0
 9 0 0
 8 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 10 0 0
 14 0 0
 12 0 0
 8 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 15 0 0
 11 0 0
 9 0 0
 13 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 16 0 0
 17 0 0
 19 0 0
 18 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 18 0 0
 19 0 0
 23 0 0
 22 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 22 0 0
 23 0 0
 21 0 0
 20 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 20 0 0
 21 0 0
 17 0 0
 16 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 18 0 0
 22 0 0
 20 0 0
 16 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 23 0 0
 19 0 0
 17 0 0
 21 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 24 0 0
 25 0 0
 27 0 0
 26 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 26 0 0
 27 0 0
 31 0 0
 30 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 30 0 0
 31 0 0
 29 0 0
 28 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 28 0 0
 29 0 0
 25 0 0
 24 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 26 0 0
 30 0 0
 28 0 0
 24 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 31 0 0
 27 0 0
@@ -633,42 +645,42 @@ numvert 8
 0.00395 0.0408 -0.00192
 numsurf 6
 SURF 0X0
-mat 0
+mat 3
 refs 4
 0 0 0
 1 0 0
 3 0 0
 2 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 3 0 0
 7 0 0
 6 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 6 0 0
 7 0 0
 5 0 0
 4 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 4 0 0
 5 0 0
 1 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 2 0 0
 6 0 0
 4 0 0
 0 0 0
 SURF 0X0
-mat 0
+mat 3
 refs 4
 7 0 0
 3 0 0
@@ -680,6 +692,8 @@ name "rudder"
 data 14
 RollArrow.mesh
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 6
 0.00333 0.02872 0.0029
 0.00333 0.02872 -0.00288
@@ -691,34 +705,34 @@ numsurf 5
 SURF 0X20
 mat 4
 refs 3
-1 0 0
-0 0 0
-4 0 0
+1 0.372868 0.884057
+0 0.351823 0.884057
+4 0.362345 0.893597
 SURF 0X20
 mat 4
 refs 3
-3 0 0
-2 0 0
-5 0 0
+3 0.351823 0.884057
+2 0.372868 0.884057
+5 0.362345 0.893597
 SURF 0X20
 mat 4
 refs 4
-0 0 0
-3 0 0
-5 0 0
-4 0 0
+0 0.351823 0.884057
+3 0.351823 0.884057
+5 0.362345 0.893597
+4 0.362345 0.893597
 SURF 0X20
 mat 4
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
+0 0.351823 0.884057
+1 0.372868 0.884057
+2 0.372868 0.884057
+3 0.351823 0.884057
 SURF 0X20
 mat 4
 refs 4
-2 0 0
-1 0 0
-4 0 0
-5 0 0
+2 0.372868 0.884057
+1 0.372868 0.884057
+4 0.362345 0.893597
+5 0.362345 0.893597
 kids 0
