--- a/Models/Cockpit/Models/enginen2_2.ac
+++ b/Models/Cockpit/Models/enginen2_2.ac
@@ -1,16 +1,16 @@
 AC3Db
-MATERIAL "Horizon2.005" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.002" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
-MATERIAL "Guage.002" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "White.002" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Number.004" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 50 trans 0.000
+MATERIAL "Horizon2.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.004" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "Guage.004" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "White.008" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "Number.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 50 trans 0.000
 OBJECT world
-name "Blender_exporter_v2.22__enginen2_2.ac"
+name "Blender_exporter_v2.19__enginen2_2.ac"
 kids 8
 OBJECT poly
 name "FF"
 data 18
-GSWarning.mesh.005
+GSWarning.mesh.011
 crease 40.0
 texture "vor-3d.png"
 texrep 1 1
@@ -31,7 +31,7 @@ kids 0
 OBJECT poly
 name "Frame"
 data 14
-Frame.mesh.003
+Frame.mesh.004
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -601,7 +601,7 @@ kids 0
 OBJECT poly
 name "Frame2"
 data 15
-Frame2.mesh.002
+Frame2.mesh.007
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -755,7 +755,7 @@ kids 0
 OBJECT poly
 name "Guage"
 data 14
-Guage.mesh.002
+Guage.mesh.008
 crease 40.0
 texture "concorde-n2.png"
 texrep 1 1
@@ -776,8 +776,10 @@ kids 0
 OBJECT poly
 name "Needle"
 data 15
-Needle.mesh.002
+Needle.mesh.003
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 10
 0.0025 -0 0.001
 0.0025 0 -0.001
@@ -793,71 +795,71 @@ numsurf 10
 SURF 0X20
 mat 3
 refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
+1 0.830449 0.69
+0 0.805505 0.69
+4 0.805505 0.964374
+5 0.830449 0.964374
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 0.830449 0.964374
+6 0.830449 0.964374
+2 0.830449 0.69
+1 0.830449 0.69
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.830449 0.964374
+7 0.805505 0.964374
+3 0.805505 0.69
+2 0.830449 0.69
 SURF 0X20
 mat 3
 refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+0 0.805505 0.69
+3 0.805505 0.69
+7 0.805505 0.964374
+4 0.805505 0.964374
 SURF 0X20
 mat 3
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
+0 0.805505 0.69
+1 0.830449 0.69
+2 0.830449 0.69
+3 0.805505 0.69
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.805505 0.964374
+6 0.830449 0.964374
+5 0.830449 0.964374
+4 0.805505 0.964374
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-9 0 0
-8 0 0
-4 0 0
+7 0.805505 0.964374
+9 0.817977 0.976846
+8 0.817977 0.976846
+4 0.805505 0.964374
 SURF 0X20
 mat 3
 refs 4
-8 0 0
-9 0 0
-6 0 0
-5 0 0
+8 0.817977 0.976846
+9 0.817977 0.976846
+6 0.830449 0.964374
+5 0.830449 0.964374
 SURF 0X20
 mat 3
 refs 3
-4 0 0
-8 0 0
-5 0 0
+4 0.805505 0.964374
+8 0.817977 0.976846
+5 0.830449 0.964374
 SURF 0X20
 mat 3
 refs 3
-6 0 0
-9 0 0
-7 0 0
+6 0.830449 0.964374
+9 0.817977 0.976846
+7 0.805505 0.964374
 kids 0
 OBJECT poly
 name "Num1"
