--- a/Models/Cockpit/Models/enginenozzle4.ac
+++ b/Models/Cockpit/Models/enginenozzle4.ac
@@ -1,13 +1,13 @@
 AC3Db
 MATERIAL "aft.001" rgb 0.640 0.640 0.640  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
 MATERIAL "Yellow.000" rgb 1.000 1.000 0.000  amb 0.667 0.667 0.667  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Horizon2.009" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.006" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
-MATERIAL "Guage.005" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "White.010" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
-MATERIAL "Guage.006" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Horizon2.014" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.010" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "Guage.010" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "White.014" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.500 0.500 0.500  shi 32 trans 0.000
+MATERIAL "Guage.011" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
 OBJECT world
-name "Blender_exporter_v2.22__enginenozzle4.ac"
+name "Blender_exporter_v2.19__enginenozzle4.ac"
 kids 10
 OBJECT poly
 name "AreaAdjust"
@@ -381,7 +381,7 @@ kids 0
 OBJECT poly
 name "FF"
 data 18
-GSWarning.mesh.009
+GSWarning.mesh.015
 crease 40.0
 texture "vor-3d.png"
 texrep 1 1
@@ -402,7 +402,7 @@ kids 0
 OBJECT poly
 name "Frame"
 data 14
-Frame.mesh.006
+Frame.mesh.010
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -972,7 +972,7 @@ kids 0
 OBJECT poly
 name "Frame2"
 data 15
-Frame2.mesh.009
+Frame2.mesh.011
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -1126,7 +1126,7 @@ kids 0
 OBJECT poly
 name "Guage"
 data 14
-Guage.mesh.005
+Guage.mesh.013
 crease 40.0
 texture "concorde-nozzle.png"
 texrep 1 1
@@ -1147,8 +1147,10 @@ kids 0
 OBJECT poly
 name "Needle"
 data 15
-Needle.mesh.008
+Needle.mesh.009
 crease 40.0
+texture "misc-1.png"
+texrep 1 1
 numvert 10
 0.0025 -0.00087 -0.0005
 0.0025 0.00087 0.0005
@@ -1164,71 +1166,71 @@ numsurf 10
 SURF 0X20
 mat 5
 refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
+1 0.823466 0.762887
+0 0.808116 0.76279
+4 0.806712 0.931042
+5 0.822062 0.931139
 SURF 0X20
 mat 5
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 0.822062 0.931139
+6 0.822062 0.931139
+2 0.823466 0.762887
+1 0.823466 0.762887
 SURF 0X20
 mat 5
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.822062 0.931139
+7 0.806712 0.931042
+3 0.808116 0.76279
+2 0.823466 0.762887
 SURF 0X20
 mat 5
 refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+0 0.808116 0.76279
+3 0.808116 0.76279
+7 0.806712 0.931042
+4 0.806712 0.931042
 SURF 0X20
 mat 5
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
+0 0.808116 0.76279
+1 0.823466 0.762887
+2 0.823466 0.762887
+3 0.808116 0.76279
 SURF 0X20
 mat 5
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.806712 0.931042
+6 0.822062 0.931139
+5 0.822062 0.931139
+4 0.806712 0.931042
 SURF 0X20
 mat 5
 refs 4
-7 0 0
-9 0 0
-8 0 0
-4 0 0
+7 0.806712 0.931042
+9 0.814339 0.938766
+8 0.814339 0.938766
+4 0.806712 0.931042
 SURF 0X20
 mat 5
 refs 4
-8 0 0
-9 0 0
-6 0 0
-5 0 0
+8 0.814339 0.938766
+9 0.814339 0.938766
+6 0.822062 0.931139
+5 0.822062 0.931139
 SURF 0X20
 mat 5
 refs 3
-4 0 0
-8 0 0
-5 0 0
+4 0.806712 0.931042
+8 0.814339 0.938766
+5 0.822062 0.931139
 SURF 0X20
 mat 5
 refs 3
-6 0 0
-9 0 0
-7 0 0
+6 0.822062 0.931139
+9 0.814339 0.938766
+7 0.806712 0.931042
 kids 0
 OBJECT poly
 name "Num1"
